--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Typhoon</h1>
     <h3>Hey, my name's Typhoon, I'm an Ohioan with an affinity for first-person shooter and rhythm games.</h3>
     <h2>About me/Things I like</h2>
-    <h3>I have had a problematic amount of mountain dew flavors- 84 to be exact. I also play a lot of Team Fortress 2, in which I am in the top 80% of rocket jumpers. I enjoy playing the rhythm game Etterna, a 4 key vsrg based on Stepmania.</h3>
+    <h3>I have had a problematic amount of mountain dew flavors- 84 to be exact. I also play a lot of Team Fortress 2, in which I am in the top 1500 rocket jumpers in the USA. I enjoy playing the rhythm game Etterna, a 4 key vsrg based on Stepmania.</h3>
     <p id="text" onclick="document.getElementById('text').innerHTML = 'Click the options below to view'">Click the options below to view</p> 
     <p id="text" onclick="document.getElementById('text').innerHTML = 'github.com/Typhoop'">Github</p> <p id="text" onclick="document.getElementById('text').innerHTML = 'typhoon#5157'">Discord</p> <p id="text" onclick="document.getElementById('text').innerHTML = 'etternaonline.com/user/Typhoop'">Etterna</p> <p id="text" onclick="document.getElementById('text').innerHTML = 'steamcommunity.com/id/gorodkrovi'">Steam</p>
 </body>
