--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <info id="info">
         <div style="font-family: nonamegiven; color: white; padding-left: 5%; padding-top: 5%; position: relative">
-            <img id="pfp" src="https://cdn.discordapp.com/avatars/612755942223773711/34b4238a21533484ca2ed17e99121fdd?size=1024" width="225px" height="225px" style="margin-top: -5px; border-radius: 10%;">
+            <img id="pfp" src="/img/big_golly.png" width="225px" height="225px" style="margin-top: -5px; border-radius: 10%;">
         </div>
 
         <small-description style="font-family: Days One; color: white; padding-left: 2%; padding-top: 4%; position: relative; word-wrap: normal;">
